--- a/src/main/resources/templates/blog-details.html
+++ b/src/main/resources/templates/blog-details.html
@@ -10,14 +10,62 @@
 <header th:insert="section/header :: header"></header>
 
 <div class="container mt-5">
-    <div th:each="el : ${post}" class="alert alert-info mt-2">
-        <h1 th:text="${el.title}"/>
-        <p th:text="${el.full_text}"/>
-        <p><b>Views: </b><span th:text="${el.views}"/></p>
-        <a th:href="'/blog/' + ${el.id} + '/edit'" class="btn btn-primary">Edit</a>
-        <a th:href="'/blog/' + ${el.id} + '/remove'" class="btn btn-primary">Delete</a>
+    <div th:each="el : ${post}" class="row justify-content-start">
+        <div class="alert alert-info mt-2 row justify-content-start">
+            <h1 th:text="${el.title}"/>
+            <p th:text="${el.full_text}"/>
+            <p><b>Views: </b><span th:text="${el.views}"/></p>
+            <div class="col-1">
+                <a th:href="'/blog/' + ${el.id} + '/edit'" class="btn btn-primary col-11">Edit</a><br><br>
+            </div>
+
+            <form th:action="'/blog/' + ${el.id} + '/remove'" method="post" class="col-1">
+                <button class="btn btn-primary col-11" type="submit">Delete</button>
+            </form>
+        </div>
+
+        <h6 class="border-bottom pb-2 mb-0">Comments</h6>
+
+        <div  th:each="elem : ${comments}"  class="p-3 bg-body rounded shadow-sm  mt-2 row justify-content-start">
+
+            <div class="d-flex text-muted pt-3">
+                <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"></rect><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+
+                <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+                    <div class="justify-content-start col-11">
+                        <div class="d-flex justify-content-between">
+                            <strong class="text-gray-dark" th:text="${elem.user_name}"></strong>
+                        </div>
+                        <span class="d-block" th:text="${elem.full_text_comment}"></span>
+                    </div>
+
+
+                </div>
+                <form th:action="'/blog/' + ${el.id} + '/remove_comment/' + ${elem.id}" method="post" class="col-1">
+                    <button class="btn btn-link col-11" type="submit">Delete</button>
+                </form>
+            </div>
+
+        </div>
+
+        <br><form th:action="'/blog/' + ${el.id} + '/add_comment'" method="post" class="mt-5">
+            <div class="form-group">
+                <label>User name</label><br>
+                <input type="text" name="user_name" class="form-control" placeholder="Enter user name"><br>
+            </div>
+            <div class="form-group">
+                <label>Send comment</label><br>
+                <textarea name="full_text_comment"  placeholder="Write your comment here" class="form-control"></textarea><br>
+            </div>
+            <button type="submit" class="btn btn-primary">Send</button>
+        </form>
+
     </div>
-</div>
+    </div>
+
+
+
+
 
 <div th:insert="section/footer :: footer"></div>
 
